# formulon

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  NOTICE  README.md  README_ja.md
cmake/: FetchGoogleTest.cmake  (+3 more)
tests/: CMakeLists.txt  divergence.yaml  ironcalc_divergence.yaml
tests/integration/: CMakeLists.txt  ooxml_minimal_writer_test.cpp
tests/oracle/: CMakeLists.txt  ENVIRONMENT.md  README.md  json_reader.cpp  json_reader.h  oracle_runner.cpp  oracle_runner.h  oracle_test.cpp
tests/oracle/cases/: aggregate.yaml  areas.yaml  chisq.yaml  code_char_jp_probes.yaml  comparison_rank_probes.yaml  complex.yaml  count.yaml  countif.yaml  countif_edges.yaml  countif_kana_folding_probes.yaml  database.yaml  datetime.yaml  datevalue_timevalue.yaml  dfunc_field_range_arg.yaml  dfunc_kana_folding_probes.yaml  distributions.yaml  distributions_ext.yaml  dynamic_array.yaml  encodeurl.yaml  engineering.yaml  engineering_special.yaml  f_dist.yaml  financial.yaml  financial_accrual.yaml  financial_coupon.yaml  financial_ext.yaml  financial_rates.yaml  floor_ceiling_edges.yaml  hypothesis.yaml  ifs.yaml  implicit_intersection.yaml  info.yaml  integration.yaml  let.yaml  let_dynamic_range_probes.yaml  let_row_column_probes.yaml  logical.yaml  lookup.yaml  lookup_kana_folding_probes.yaml  lowrisk_probes.yaml  (+22 more)
tests/oracle/golden/: aggregate.golden.json  areas.golden.json  bootstrap.golden.json  chisq.golden.json  code_char_jp_probes.golden.json  comparison_rank_probes.golden.json  complex.golden.json  count.golden.json  countif.golden.json  countif_edges.golden.json  countif_kana_folding_probes.golden.json  database.golden.json  datetime.golden.json  datevalue_timevalue.golden.json  dfunc_field_range_arg.golden.json  dfunc_kana_folding_probes.golden.json  distributions.golden.json  distributions_ext.golden.json  engineering_special.golden.json  f_dist.golden.json  financial.golden.json  financial_accrual.golden.json  financial_coupon.golden.json  financial_ext.golden.json  floor_ceiling_edges.golden.json  hypothesis.golden.json  ifs.golden.json  implicit_intersection.golden.json  info.golden.json  integration.golden.json  let.golden.json  let_dynamic_range_probes.golden.json  let_row_column_probes.golden.json  logical.golden.json  lookup.golden.json  lookup_kana_folding_probes.golden.json  lowrisk_probes.golden.json  math.golden.json  math_combinatorics.golden.json  math_trig.golden.json  (+19 more)
tests/oracle/golden/ironcalc/: calc_test_no_export__tables__Escape.golden.json  calc_test_no_export__tables__Functions_Filters.golden.json  calc_test_no_export__tables__Functions_Hidden.golden.json  calc_test_no_export__tables__Hidden.golden.json  calc_test_no_export__tables__Sheet1.golden.json  calc_test_no_export__tables__WithHeaders.golden.json  calc_test_no_export__tables__filters.golden.json  calc_tests__ABS__Sheet1.golden.json  calc_tests__AND_OR_XOR__AND_XOR_OR.golden.json  calc_tests__ARABIC_ROMAN__ARABIC.golden.json  calc_tests__ARABIC_ROMAN__ROMAN.golden.json  calc_tests__ATAN2_POWER__Sheet1.golden.json  calc_tests__AVERAGE__Sheet1.golden.json  calc_tests__AVERAGE__Sheet2.golden.json  calc_tests__BASE__Sheet1.golden.json  calc_tests__BESSEL__All.golden.json  calc_tests__BESSEL__BESSELI.golden.json  calc_tests__BESSEL__BESSELJ.golden.json  calc_tests__BESSEL__BESSELK.golden.json  calc_tests__BESSEL__BESSELY.golden.json  calc_tests__BETA_GAMMA__BETA_DIST.golden.json  calc_tests__BETA_GAMMA__Sheet1.golden.json  calc_tests__BITs__Sheet1.golden.json  calc_tests__CELL__CELL.golden.json  calc_tests__CHOOSE__CHOOSE.golden.json  calc_tests__COMBIN_COMBINA__COMBIN_COMBINA.golden.json  calc_tests__COMPLEXs__Sheet1.golden.json  calc_tests__COMPLEXs__Sheet2.golden.json  calc_tests__CONCATENATE__Sheet1.golden.json  calc_tests__CONCATENATE__Sheet2.golden.json  calc_tests__CONCAT__Sheet1.golden.json  calc_tests__CONVERT__Area.golden.json  calc_tests__CONVERT__Energy.golden.json  calc_tests__CONVERT__Force.golden.json  calc_tests__CONVERT__Information.golden.json  calc_tests__CONVERT__Magtetism.golden.json  calc_tests__CONVERT__Power.golden.json  calc_tests__CONVERT__Pressure.golden.json  calc_tests__CONVERT__Speed.golden.json  calc_tests__CONVERT__Temperature.golden.json  (+194 more)
tests/unit/: arena_test.cpp  error_test.cpp  expected_test.cpp  registry_catalog_test.cpp  sheet_spill_test.cpp  sheet_test.cpp  status_macros_test.cpp  strings_test.cpp  structured_log_test.cpp  value_array_test.cpp  value_test.cpp  workbook_test.cpp
tests/unit/eval/: array_producer_test.cpp  builtins_chisq_test.cpp  builtins_complex_test.cpp  builtins_count_test.cpp  builtins_countif_test.cpp  builtins_cube_test.cpp  builtins_database_test.cpp  builtins_datetime_test.cpp  builtins_datevalue_timevalue_test.cpp  builtins_descriptive_stats_test.cpp  builtins_distributions_ext2_test.cpp  builtins_distributions_test.cpp  builtins_engineering_convert_test.cpp  builtins_engineering_special_test.cpp  builtins_engineering_test.cpp  builtins_f_test.cpp  builtins_financial2_test.cpp  builtins_financial_accrual_test.cpp  builtins_financial_bond_simple_test.cpp  builtins_financial_coupon_test.cpp  builtins_financial_rates_test.cpp  builtins_financial_test.cpp  builtins_floor_ceiling_test.cpp  builtins_hypothesis_test.cpp  builtins_ifs_test.cpp  builtins_implicit_intersection_test.cpp  builtins_info_extra_test.cpp  builtins_info_test.cpp  builtins_logical_test.cpp  builtins_lookup_test.cpp  builtins_math2_test.cpp  builtins_math3_test.cpp  builtins_math4_test.cpp  builtins_math5_test.cpp  builtins_math_test.cpp  builtins_misc_test.cpp  builtins_rand_test.cpp  builtins_rank_test.cpp  builtins_references_test.cpp  builtins_regression_test.cpp  (+42 more)
tests/unit/eval/builtins/: dynamic_array_test.cpp
tests/unit/eval/stats/: incomplete_beta_test.cpp  special_functions_test.cpp
tests/unit/io/: ooxml_writer_cell_test.cpp
tests/unit/parser/: ast_dump_test.cpp  ast_test.cpp  let_test.cpp  parser_error_test.cpp  parser_test.cpp  spill_ref_test.cpp  tokenizer_test.cpp
tests/unit/utils/: double_format_test.cpp
(+206 files in other folders)
